refactor: Rank의 점수계산 Board로 이전, List를 반환할 때 변경할 수 없게 수정
- 기존의 방식에서는 pawn이 세로로 겹치는 경우를 계산할 수 없음
- 다시 Board 클래스로 점수 계산 이전
- sortByPoint에서 list를 반환할 떄 변경할 수 없게 수정